@@ -1,3 +1,8 @@
+2007-12-05  Hendrik Tews  <tews@tandem.cs.ru.nl>
+
+        Semantic
+        * fix local external declarations
+
 2007-12-04  Hendrik Tews  <tews@tandem.cs.ru.nl>
 
         Semantic
